erDiagram
  users {
    uuid id PK
    text email
    text full_name
    enum role
    boolean is_active
    timestamptz created_at
  }

  clients {
    uuid id PK
    enum status
    text name
    text email
    uuid assigned_accountant_id FK
    text xpm_uuid
    timestamptz created_at
  }

  properties {
    uuid id PK
    uuid client_id FK
    text address
    text suburb
    enum state
    text postcode
    numeric ownership_pct
    numeric land_area_sqm
    text zoning
    text pid
  }

  assessment_documents {
    uuid id PK
    uuid client_id FK
    text file_path
    date notice_date
    text valuation_year
  }

  valuation_notices {
    uuid id PK
    uuid property_id FK
    uuid source_document_id FK
    uuid appraised_by_id FK
    date valuation_date
    numeric assessed_land_value
    numeric appraised_value
    numeric valuation_delta
    enum decision_outcome
    boolean is_exempt
  }

  valuation_notice_files {
    uuid id PK
    uuid valuation_notice_id FK
    text blob_path
    text original_name
    enum upload_status
    uuid uploaded_by FK
    uuid confirmed_by FK
  }

  dispute_cases {
    uuid id PK
    text case_reference
    uuid client_id FK
    uuid property_id FK
    uuid valuation_notice_id FK
    uuid assigned_accountant_id FK
    uuid assigned_lawyer_id FK
    enum jurisdiction
    enum status
    date statutory_deadline
    uuid client_approval_token
    timestamptz client_approved_at
    timestamptz client_approval_token_expires_at
    smallint reminder_count
    enum outcome
    numeric tax_saving_achieved
  }

  dispute_legal_grounds {
    uuid id PK
    uuid dispute_id FK
    enum ground
    boolean validated
    text notes
  }

  comparable_sales {
    uuid id PK
    uuid dispute_case_id FK
    text address
    date sale_date
    numeric sale_price
    numeric adjusted_land_value
    uuid created_by_id FK
  }

  dispute_documents {
    uuid id PK
    uuid dispute_id FK
    enum document_type
    text filename
    text blob_storage_url
    uuid uploaded_by FK
    timestamptz uploaded_at
  }

  dispute_constraints {
    uuid id PK
    uuid dispute_id FK
    enum constraint_type
    text description
  }

  constraint_files {
    uuid id PK
    uuid dispute_constraint_id FK
    enum document_category
    text blob_path
    enum upload_status
    uuid uploaded_by FK
    uuid confirmed_by FK
  }

  package_documents {
    uuid id PK
    uuid dispute_case_id FK
    text name
    enum category
    enum status
    text blob_name
    integer file_size_bytes
    timestamptz generated_at
  }

  users ||--o{ clients : "assigned accountant"
  users ||--o{ valuation_notices : "appraised by"
  users ||--o{ valuation_notice_files : "uploaded by"
  users ||--o{ valuation_notice_files : "confirmed by"
  users ||--o{ dispute_cases : "accountant"
  users ||--o{ dispute_cases : "lawyer"
  users ||--o{ comparable_sales : "created by"
  users ||--o{ dispute_documents : "uploaded by"
  users ||--o{ constraint_files : "uploaded by"
  users ||--o{ constraint_files : "confirmed by"

  clients ||--o{ properties : "owns"
  clients ||--o{ assessment_documents : "has"
  clients ||--o{ dispute_cases : "subject of"

  properties ||--o{ valuation_notices : "has"
  properties ||--o{ dispute_cases : "disputed in"

  assessment_documents ||--o{ valuation_notices : "source doc"

  valuation_notices ||--o{ valuation_notice_files : "has files"
  valuation_notices ||--o{ dispute_cases : "triggers"

  dispute_cases ||--o{ dispute_legal_grounds : "grounded by"
  dispute_cases ||--o{ comparable_sales : "supported by"
  dispute_cases ||--o{ dispute_documents : "has documents"
  dispute_cases ||--o{ dispute_constraints : "constrained by"
  dispute_cases ||--o{ package_documents : "packaged into"

  dispute_constraints ||--o{ constraint_files : "evidenced by"